<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="10"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:padding="20dp"
        android:textStyle="bold"
        android:text="@string/calculator"
        android:fontFamily="monospace"
        android:textColor="#ffffff"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#000000"
        android:paddingTop="65dp"
        android:textColor="#ffffff"
        android:textAlignment="viewEnd"
        android:textSize="55sp"
        android:fontFamily="monospace"
        android:paddingEnd="20dp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#000000">


        <Button
            android:id="@+id/clear"
            android:fontFamily="monospace"
            android:layout_weight="1"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ac"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:background="@drawable/bgcolor"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/back"
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/arrow"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:background="@drawable/bgcolor"/>

        <Button
            android:id="@+id/modulo"
            android:fontFamily="monospace"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:layout_marginBottom="7dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/percentage"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:background="@drawable/bgcolor"/>

        <Button
            android:id="@+id/division"
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="7dp"
            android:text="@string/division"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="@drawable/operations_layout"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#000000">


        <Button
            android:id="@+id/no7"
            android:layout_width="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/rounded"
            android:fontFamily="monospace"
            android:text="@string/_7"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/no8"
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="7dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:background="@drawable/rounded"/>

        <Button
            android:id="@+id/no9"
            android:fontFamily="monospace"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_height="match_parent"
            android:text="@string/_9"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#ffffff"
            android:background="@drawable/rounded"/>

        <Button
            android:id="@+id/multiply"
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="@drawable/operations_layout"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#000000">


        <Button
            android:id="@+id/no4"
            android:fontFamily="monospace"
            android:layout_weight="1"
            android:layout_marginBottom="7dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_4"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#ffffff"
            android:background="@drawable/rounded"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/no5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:background="@drawable/rounded"
            android:fontFamily="monospace"
            android:text="@string/_5"
            android:textColor="#ffffff"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/no6"
            android:fontFamily="monospace"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:text="@string/_6"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:background="@drawable/rounded"/>

        <Button
            android:id="@+id/subtraction"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:background="@drawable/operations_layout"
            android:fontFamily="monospace"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/subtract"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#000000">


        <Button
            android:id="@+id/no1"
            android:fontFamily="monospace"
            android:layout_weight="1"
            android:layout_marginBottom="7dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_1"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#ffffff"
            android:background="@drawable/rounded"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/no2"
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/rounded"/>

        <Button
            android:id="@+id/no3"
            android:fontFamily="monospace"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_3"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="30sp"
            android:layout_marginBottom="7dp"
            android:textColor="#ffffff"
            android:background="@drawable/rounded"/>

        <Button
            android:id="@+id/addition"
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="7dp"
            android:text="@string/add"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:background="@drawable/operations_layout"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="1"
        android:background="#000000">

        <Button
            android:id="@+id/no0"
            android:fontFamily="monospace"
            android:layout_weight="0.52"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_0"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="textStart"
            android:paddingStart="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="7dp"
            android:textColor="#ffffff"
            android:background="@drawable/rounded"
            tools:ignore="NestedWeights,RtlSymmetry" />

        <Button
            android:id="@+id/dot"
            android:fontFamily="monospace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.24"
            android:text="@string/dot"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/rounded"/>

        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.24"
            android:text="@string/equal"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="7dp"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:fontFamily="monospace"
            android:background="@drawable/operations_layout"/>

    </LinearLayout>

</LinearLayout>